Soon, name port fixes

--- a/src/pwa/manifest.json
+++ b/src/pwa/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "PureJS",
-  "name": "PureJs Blog",
+  "short_name": "JsWorm",
+  "name": "JsWorm Blog",
   "background_color": "#24292e",
   "display": "standalone",
   "icons": [
