--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sslgenerate": "openssl req -x509 -newkey rsa:4096 -keyout ssl/key.pem -out ssl/cert.pem -days 365",
-    "prod": "set NODE_ENV=development&&node index.js"
+    "prod": "set NODE_ENV=production&&node index.js"
   },
   "repository": {
     "type": "git",
